spec/error/RHSOmitted.agda
-- /Users/banacorn/github/agda-mode/spec/error/RHSOmitted.agda:3,1-2
-- The right-hand side can only be omitted if there is an absurd
-- pattern, () or {}, in the left-hand side.
-- when checking that the clause a has type _1

module RHSOmitted where

a
